[project]
name = "wordpress"
description = "Upload image from comfyui to WordPress add your site setting in file wordpress_config.json"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/mohsensd1373/comfyui_wordpress"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kingblack7313"
DisplayName = "comfyui_wordpress"
Icon = ""
